# gearbox-widget

./: .containerignore  Cargo.toml  README.md  run-podman.sh
container/: Containerfile
data/: gearbox.gresource.xml  style.css
src/: gearbox.rs  gearbox_base.rs  main.rs
